--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/danijel-nik/chat-app#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "socket.io": "^3.1.1"
